kube/elad_assign_app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elad_assign-service
spec:
  selector:
    app: elad_assign
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
